# brainiak

./: .codecov.yml  .flake8  .gitignore  .gitmodules  .travis.yml  339.bugfix  CMakeLists.txt  CONTRIBUTING.rst  Dockerfile  LICENSE  NEWS.rst  README.rst  della-pr-check.sh  pr-check.sh  pr-check.sh~  pyproject.toml  requirements-dev.txt  run-checks.sh  run-tests.sh  setup.cfg  setup.py
.cibw/: build_libomp_macos.sh
.conda/: bld.bat  build.sh  meta.yaml
.github/workflows/: cd.yml  ci.yml  della_notebooks.yml  main.yml
brainiak/: __init__.py  image.py  io.py  isc.py  isfc.py  tda.py
brainiak/eventseg/: _utils.pyx  event.py
brainiak/factor_analysis/: CMakeLists.txt  __init__.py  htfa.py  setup.py  tfa.py  tfa_extension.cpp
brainiak/factoranalysis/: CMakeLists.txt  htfa.py  tfa.py  tfa_extension.cpp
brainiak/fcma/: .gitignore  CMakeLists.txt  __init__.py  classifier.py  cython_blas.pyx  cython_blas.pyxbld  fcma.py  io.py  mvpa_voxelselector.py  preprocessing.py  util.py  voxelselector.py
brainiak/fcma/src/: fcma_extension.cc
brainiak/funcalign/: dl.py  fastsrm.py  mdms.py  mydetsrm.py  rsrm.py  srm.py  sssrm.py
brainiak/functional_alignment/: __init__.py  srm.py
brainiak/hyperparamopt/: __init__.py  hpo.py  mcmc.py  norm.pyx
brainiak/matnorm_models/: __init__.py  base.py  brsa.py  helpers.py  noise_cov_gp.py  noise_covs.py  regression.py
brainiak/matnormal/: __init__.py  base.py  brsa.py  cov_gp.py  cov_kron.py  covs.py  dpmnsrm.py  dpsrm.py  helpers.py  matnormal_likelihoods.py  mnrsa.py  noise_cov_kron.py  regression.py  srm_margs.py  srm_margw.py  utils.py
brainiak/reconstruct/: iem.py
brainiak/reprsimil/: __init__.py  brsa.py
brainiak/searchlight/: __init__.py  example_fn.cpp  searchlight.py
brainiak/utils/: fmrisim.py  fmrisim_real_time_generator.py  kronecker_solvers.py  simulator.py  utils.py  utils.py~
docs/: Makefile  api.rst  conf.py  examples.rst  index.rst  installation.rst  make.bat  release_notes.rst
docs/examples/: Event_Segmentation.ipynb  download_data.sh  iem_example_synthetic_RF_data.ipynb  requirements-examples.txt
docs/newsfragments/: 156.bugfix  194.feature  239.bugfix  240.feature  266.feature  268.doc  272.feature  277.removal  292.feature  293.feature  302.feature  303.doc  304.trivial  310.feature  328.feature  337.trivial  353.feature  384.feature  396.feature  397.feature  398.feature  399.feature  405.feature  409.feature  451.feature  _template.jinja  mdms.jinja
examples/: download-data.sh  hpo_example.py  smb-fMRI.ipynb  srm.ipynb  srm.py  srm_image_prediction_example.py
examples/eventseg/: HiddenMarkovModels.ipynb  README.txt  plot_simulated_data.py  requirements.txt  simulated_data.py
examples/factor_analysis/: README.rst  get_tfa_input_from_nifti.py  latent_factor_from_htfa.py  latent_factor_from_tfa.py  run_mpi_htfa.sh
examples/factoranalysis/: README.rst  get_tfa_input_from_nifti.py  htfa_cv_example.py  htfa_tutorial.ipynb  htfa_tutorial.md  latent_factor_from_htfa.py  latent_factor_from_tfa.py  requirements.txt  run_mpi_htfa_cv.sh
examples/fcma/: classification.py  corr_comp.py  download_data.sh  fcma_executable_example.py  file_io.py  generate_fcma_data.py  mvpa_classification.py  mvpa_voxel_selection.py  requirements.txt  run.py  run_mvpa_voxel_selection.sh  run_voxel_selection.sh  running_example.txt  voxel_selection.py
examples/funcalign/: FastSRM_encoding_experiment.ipynb  download-data.sh  fastsrm_image_prediction_example.ipynb  mdms_time_segment_matching_distributed.py  mdms_time_segment_matching_example.ipynb  requirements.txt  rsrm_synthetic_reconstruction.ipynb  searchlight_srm_example.py  searchlight_srm_time_segment_matching_example.ipynb  srm_image_prediction_example.ipynb  srm_image_prediction_example.py  srm_image_prediction_example_distributed.py  sssrm_image_prediction_example.py
examples/hyperparamopt/: hpo_example.py
examples/isc/: download_data.sh  isfc.py
examples/isfc/: download_data.sh  isfc.py
examples/matnormal/: MN-RSA.ipynb
examples/reconstruct/: iem2d_example.ipynb  iem2d_example_synthetic_RF_data.ipynb  iem_example.py  iem_example_illconditioned_X.ipynb  iem_example_notebook.ipynb  iem_example_synthetic_RF_data.ipynb  iem_example_synthetic_data.ipynb
examples/reprsimil/: Bayesian_RSA_example.ipynb  Group_BRSA_example.ipynb  bayesian_rsa_example.ipynb  brsa_example.ipynb  brsa_representational_similarity_estimate_example.ipynb  gbrsa_group_representational_similarity_estimate_example.ipynb  group_brsa_example.ipynb
examples/searchlight/: GenreSearchlight.py  MNI152_T1_2mm_brain_mask.nii  a1plus_2mm.nii  eventseg_searchlight.py  example_searchlight.py  genre_searchlight_example.py  requirements.txt
examples/tda/: tda_example.py
examples/utils/: fmrisim_example.py  fmrisim_multivariate_example.ipynb  fmrisim_real-time_generator.py  requirements.txt  simulator_example.py
htfa/: htfa.py  htfa_test.py  tfa.py  tfa_preprocess.py  tfa_preprocess_test.py  utils.py
src/brainiak/: image.py  isc.py
src/brainiak/eventseg/: CMakeLists.txt  __init__.py  _utils.pyx  event.py
test/srm/: srm.py  test_srm.py
tests/: .flake8  conftest.py  pytest_mpiexec_plugin.py  simbba_test.py  test_brsa.py  test_isfc.py  test_notebooks.py
tests/eventseg/: test_event.py
tests/factor_analysis/: test_htfa.py  test_tfa.py
tests/factoranalysis/: test_htfa.py  test_tfa.py
tests/fcma/: corr.npytest  raw_data.npytest  test_classification.py  test_io.py  test_mvpa_voxel_selection.py  test_preprocessing.py  test_util.py  test_voxel_selection.py  test_voxel_selection_0.py  test_voxel_selection_1.py
tests/funcalign/: sr_v0_4.npy  sr_v0_4.npz  test_dl.py  test_fastsrm.py  test_mdms_distributed.py  test_rsrm.py  test_srm.py  test_srm_distributed.py  test_sssrm.py
tests/functional_alignment/: test_srm.py
tests/hyperparamopt/: test_hpo.py  test_mcmc.py
tests/image/: test_image.py
tests/io/: test_io.py
tests/isc/: test_isc.py
toolkit/: __init__.py
tsfa/: htfa.py  htfa_test.py  srm_classify.py  srm_preprocess.py  test.py  tfa.py  tfa_preprocess.py  tsfa.py  utils.py
(+106 files in other folders)
