[metadata]
name = brainiak
description = Brain Imaging Analysis Kit
long_description = file: README.rst
long_description_content_type = text/x-rst
url = http://brainiak.org
author = Princeton Neuroscience Institute and Intel Corporation
author_email = mihai.capota@intel.com
maintainer = Mihai Capota
maintainer_email = mihai.capota@intel.com
license = Apache 2
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: C++
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
	Topic :: Scientific/Engineering :: Medical Science Apps.
	Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Software Development
    Topic :: Utilities
    Typing :: Typed
keywords =
	neuroscience
	algorithm
	fMRI
	distributed
	scalable
project_urls =
    Documentation = https://brainiak.org/docs/
    Bug Tracker = https://github.com/brainiak/brainiak/issues
    Changelog = https://brainiak.org/docs/release_notes.html
    Chat =  https://gitter.im/brainiak/brainiak

[options]
packages = find:
install_requires =
    numpy<=1.23.1
    
	# https://travis-ci.org/brainiak/brainiak/jobs/545838666
	mpi4py>=3
    nitime
    scikit-learn>=0.18
        
	# See https://github.com/scipy/scipy/pull/8082
    scipy!=1.0.0
    statsmodels
    pymanopt<=0.2.5
    theano>=1.0.4  # See https://github.com/Theano/Theano/pull/6671
    psutil
    nibabel
    joblib
    wheel  # See https://github.com/astropy/astropy-helpers/issues/501
    pydicom

python_requires = >=3.5
include_package_data = True
zip_safe = False
use_scm_version=True

[options.packages.find]
where = .

[flake8]
max-complexity = 10
extend-ignore =
    # Docstrings
    D,
    E721,
    E231

[coverage:run]
source = brainiak
branch = True
concurrency = multiprocessing
parallel = True

[coverage:report]
fail_under = 90

[tool:pytest]
addopts =
    -s
    --durations=0
